--- a/Conan/Conan.html
+++ b/Conan/Conan.html
@@ -62,6 +62,11 @@ Conan<br>
 <div class="mySlides" style="text-align: center;"><img src="ConanBook038.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanBook039.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ConanBook040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanMovie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanMovie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanMovie3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanCartoon.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ConanArt1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
