--- a/Warhammer/Warhammer.html
+++ b/Warhammer/Warhammer.html
@@ -31,6 +31,10 @@
 <div class="mySlides" style="text-align: center;"><img src="Warhammer10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warhammer11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warhammer12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warhammer13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warhammer14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warhammer15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warhammer16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
