--- a/index.html
+++ b/index.html
@@ -9360,6 +9360,13 @@
 </tr>
 
 <tr>
+<td>Miracleman</td>
+<td>1954</td>
+<td>Eclipse</td>
+<td><a href="Miracleman/Miracleman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Miss America Comics</td>
 <td>1941</td>
 <td>Marvel</td>
