--- a/Miracleman/Miracleman.html
+++ b/Miracleman/Miracleman.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Miracleman1.jpg"> <br>
-24 issues from 1985-1993 by Eclipse
+24 issues from 1985-1993 by Eclipse, 22 issues 2014-2016 by Marvel
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
