--- a/Miracleman/Miracleman.html
+++ b/Miracleman/Miracleman.html
@@ -43,6 +43,18 @@
 <div class="mySlides" style="text-align: center;"><img src="Miracleman22.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Miracleman23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Miracleman24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Miracleman36.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
