--- a/index.html
+++ b/index.html
@@ -2839,6 +2839,13 @@
 </tr>
 
 <tr>
+<td>Bulletproof Coffin</td>
+<td>2010</td>
+<td>Image</td>
+<td><a href="BulletproofCoffin/BulletproofCoffin.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bullseye: Greatest Hits</td>
 <td>2004</td>
 <td>Marvel</td>
