--- a/YTheLastMan/YTheLastMan.html
+++ b/YTheLastMan/YTheLastMan.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-<img src="YTheLastMan.jpg"> <br>
-Series: 60 issues 2002 - 2008<br>
-Publisher: Vertigo<br>
+<img src="YTheLastMan1.jpg"> <br>
+60 issues from 2002 - 2008 by Vertigo
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -20,7 +19,18 @@ Publisher: Vertigo<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="YTheLastMan.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="YTheLastMan12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
