--- a/index.html
+++ b/index.html
@@ -5706,6 +5706,13 @@
 </tr>
 
 <tr>
+<td>From Hell</td>
+<td>1991</td>
+<td>Mad Love</td>
+<td><a href="FromHell/FromHell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>From the Earth to the Moon</td>
 <td>1863</td>
 <td>Jules Vern</td>
