Punk Rock Jesus

--- a/index.html
+++ b/index.html
@@ -10939,6 +10939,13 @@
 </tr>
 
 <tr>
+<td>Punk Rock Jesus</td>
+<td>2012</td>
+<td>Vertigo</td>
+<td><a href="PunkRockJesus/PunkRockJesus.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Quasar</td>
 <td>1989</td>
 <td>Marvel</td>
