--- a/index.html
+++ b/index.html
@@ -12549,6 +12549,13 @@
 </tr>
 
 <tr>
+<td>Starman</td>
+<td>1988</td>
+<td>DC</td>
+<td><a href="Starman/Starman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Starmasters</td>
 <td>1995</td>
 <td>Marvel</td>
