--- a/index.html
+++ b/index.html
@@ -7218,6 +7218,13 @@
 </tr>
 
 <tr>
+<td>Invincible</td>
+<td>2003</td>
+<td>Image</td>
+<td><a href="Invincible/Invincible.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Invincible Iron Man</td>
 <td>2008</td>
 <td>Marvel</td>
