--- a/BarefootGen/BarefootGen.html
+++ b/BarefootGen/BarefootGen.html
@@ -9,7 +9,8 @@
 
 <body>
 <img src="BarefootGen1.jpg"> <br>
-10 issues from 1973 - 1987 by Shueisha
+10 issues from 1973 - 1987 by Shueisha<br>
+2 Animated movies 1983, 1986 by Madhouse
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
