--- a/MindMgmt/MindMgmt.html
+++ b/MindMgmt/MindMgmt.html
@@ -2,16 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Mind Mgmt</title>
 </head>
 
 <body>
 <img src="MindMgmt.jpg"> <br>
-Series: 36 issues (#0-35) 2012 <br>
-Publisher: Dark Horse<br>
-Written and Illustrations by Matt Kindt<br>
+36 issues from 2012-2014 by Dark Horse<br>
+Written and Illustrated by Matt Kindt<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MindMgmt12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Matt Kindt, the most original voice in genre comics, outdoes himself in this bold new espionage series! Reporting on a commercial flight where everyone aboard lost their memories, a young journalist stumbles onto a much bigger story, the top-secret Mind Management program. Her ensuing journey involves weaponized psychics, hypnotic advertising, talking dolphins, and seemingly immortal pursuers, as she attempts to find the flight's missing passenger, the man who was Mind MGMT's greatest success-and its most devastating failure. But in a world where people can rewrite reality itself, can she trust anything she sees?
 </p><p>
 Issue #0 is a reprint of issue #1, released after issue #1 sold out.
