--- a/index.html
+++ b/index.html
@@ -3231,6 +3231,13 @@
 </tr>
 
 <tr>
+<td>Chew</td>
+<td>2009</td>
+<td>Image</td>
+<td><a href="Chew/Chew.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chiaroscuro: The Private Lives of Leonardo da Vinci</td>
 <td>1995</td>
 <td>Vertigo</td>
