--- a/index.html
+++ b/index.html
@@ -6210,6 +6210,13 @@
 </tr>
 
 <tr>
+<td>Gotham Central</td>
+<td>2003</td>
+<td>DC</td>
+<td><a href="GothamCentral/GothamCentral.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grandville</td>
 <td>2009</td>
 <td>Jonathan Cape</td>
