--- a/FearAgent/FearAgent.html
+++ b/FearAgent/FearAgent.html
@@ -2,17 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Fear Agent</title>
 </head>
 
 <body>
-<h2>Fear Agent</h2>
-<img src="FearAgent2005.jpg"> 
-<img src="FearAgent2007.jpg"><br>
-Series: 32 issues so far. <br>
-Publisher: Image 2005, Dark Horse 2007<br>
+<img src="FearAgent1.jpg"> <br>
+11 issues (#1-11) in 2005 - 2007 by Image, 21 issues (#12-32) 2007 - 2011 by Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="FearAgent1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FearAgent22.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Fear Agent was an American science fiction comic book series written by Rick Remender with art by Tony Moore and Jerome Opena, who alternated on story arcs. The series was published by Dark Horse Comics and previously by Image Comics.
 </p><p>
 The series stars the rugged alcoholic Texas spaceman Heathrow Huston, the supposed last Fear Agent, in a series of fast-paced adventures. The series has its emphasis on action, adventure, horror, and plot twists rather than realism or scientific detail. Remender claims in the first issue that "science fiction has lost its stones" and that Fear Agent was his attempt to fight that trend. Many incidents in the early issues are unexplained until many issues later to reinforce this.
