--- a/index.html
+++ b/index.html
@@ -5207,6 +5207,13 @@
 </tr>
 
 <tr>
+<td>Epileptic</td>
+<td>2005</td>
+<td>Random House</td>
+<td><a href="Epileptic/Epileptic.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Erte</td>
 <td>1892</td>
 <td>Creator</td>
