--- a/index.html
+++ b/index.html
@@ -9619,6 +9619,13 @@
 </tr>
 
 <tr>
+<td>Morning Glories</td>
+<td>2010</td>
+<td>Image</td>
+<td><a href="MorningGlories/MorningGlories.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mort The Dead Teenager</td>
 <td>1993</td>
 <td>Marvel</td>
