--- a/index.html
+++ b/index.html
@@ -7190,6 +7190,13 @@
 </tr>
 
 <tr>
+<td>Infinite Kung Fu</td>
+<td>2000</td>
+<td>Kagan McLeod</td>
+<td><a href="InfiniteKungFu/InfiniteKungFu.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Infinity War</td>
 <td>1992</td>
 <td>Marvel</td>
@@ -12903,6 +12910,13 @@
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="Supernaturals/Supernaturals.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Supreme</td>
+<td>1992</td>
+<td>Image</td>
+<td><a href="Supreme/Supreme.html">Details</a></td>
 </tr>
 
 <tr>
