--- a/MisterMiracle/MisterMiracle.html
+++ b/MisterMiracle/MisterMiracle.html
@@ -2,18 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Mister Miracle</title>
 </head>
 
 <body>
-<h2>Mister Miracle</h2>
 <img src="MisterMiracle.jpg"> <br>
-Series: on-going<br>
-Writer: Tom King
-Artist: Mitch Gerads
-Publisher: 2017 DC Comics 
+25 issues 1971 - 1978, 28 issues 1989 -1991, 7 issues 1996,  12 issues 2017 - 2019 by DC Comics 
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle1.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle2.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle3.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle4.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle5.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle6.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle7.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle8.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle9.jpg" title="cover by Jack Kirby"></div>
+<div class="mySlides" style="text-align: center;"><img src="MisterMiracle10.jpg" title="cover by Jack Kirby"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 With the Mister Miracle maxiseries, Tom King and Mitch Gerads attempt to build a new literary touchstone in comics. Just as Watchmen channelled the Cold War nihilism of the ‘80s, Ghost World tackled the isolation of the ‘90s and The Ultimates straddled post-9/11 patriotism and the unchecked military force, this book aims to reflect the pre-apocalyptic dissonance of now. A toxicity that gave King an anxiety attack so severe it landed him in the ER. 
 </p><p>
 It’s a lofty goal, but after reading the first four issues, damn if they’re not on the right track. The series catches a Zeitgeist of discord in its pages, confining Jack Kirby’s messianic escape artist in a cage of his own malaise. Like his pencil work in The Sheriff of Babylon—also written by King—Gerads’ subtle facials expressions and body language harmonize with naturalistic dialogue, lending each sigh and quip a new gravitas. This isn’t just an immaculately produced comic, but a comic designed for relevance.
