--- a/Invaders/invaders.html
+++ b/Invaders/invaders.html
@@ -2,18 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Invaders</title>
 </head>
 
 <body>
-<h2>The Invaders</h2>
-<img src="Invaders001.jpg"><br>
-Series: The Invaders<br>
-Publisher: <a href="../../Publisher/marvel.html">Marvel Comics</a> <br>
-Illustrator: Sal Buscema<br>
-Writer: Roy Thomas<br>
+
+<img src="Invaders1.jpg"><br>
+41 issues from 1975 - 1979 by <a href="../../Publisher/marvel.html">Marvel Comics</a>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Invaders1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Invaders12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Invaders team first appeared in flashback stories set during World War II, and comprised existing characters from Timely Comics, the 1940s predecessor of Marvel. Originally, Captain America (Steve Rogers), his sidekick Bucky (James Barnes), the original android Human Torch ("Jim Hammond"), the Torch's sidekick Toro (Thomas Raymond) and Namor the Sub-Mariner were together as heroes opposing the forces of Nazism. When these superheroes saved the life of British Prime Minister Winston Churchill from Master Man, the thankful Churchill suggested that they should become a team, known as the Invaders.
 </p><p>
 The prototype for the Invaders, the All-Winners Squad, created by publisher Martin Goodman and scripter Bill Finger, was an actual historic Golden Age comic book feature with only two appearances—in All Winners Comics #19 (Fall 1946) and #21 (Winter 1947; there was no issue #20). This team had much of the same membership as the Invaders, but had its adventures in the post–World War II era, the time that their adventures were published. This group was also notable for being the first in which its members did not entirely get along, prefiguring the internal conflicts of the Fantastic Four in the 1960s.
