Adventures of the Big Boy

--- a/index.html
+++ b/index.html
@@ -650,6 +650,13 @@
 </tr>
 
 <tr>
+<td>Adventures of the Big Boy</td>
+<td>1956</td>
+<td>Marvel</td>
+<td><a href="AdventuresOfTheBigBoy/AdventuresOfTheBigBoy.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures of the Thing</td>
 <td>1992</td>
 <td>Marvel</td>
