--- a/BlackHammer/BlackHammer.html
+++ b/BlackHammer/BlackHammer.html
@@ -2,18 +2,46 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Black Hammer</title>
 </head>
 
 <body>
-<img src="BlackHammer.jpg"> <br>
-Illustrators: Dean Ormston, David Rubin, Writer: Jeff Lemire<br>
-Publisher: 2017 Dark Horse Comics<br>
+<img src="BlackHammer1.jpg"> <br>
+16 issues from 2016 - 2017 by Dark Horse
 <p>
-Black Hammer is Jeff Lemire’s remix of every Silver-Age superhero beat he’s ever concocted. Lemire and artists Dean Ormston and David Rubin jet into a post-modern buffet where Adam Strange is a wily, nonsensical hermit and Mary Marvel is an alcoholic middle-aged woman stuck in the super-powered body of a child. These characters are inexplicably trapped in the rural town of Rockwood, caged in by an invisible fence that kills them if they pass through. The series’ second year has only hinted at the cavernous depth waiting to be explored; the relationships, careers and decades hiding behind each player. As fun as it can be to watch the creators revel in their laissez faire capes sandbox, Black Hammer’s haunting characterization—conveyed with subtlety by Ormston—is what elevates it to excellence. Only in these pages does a shape-shifting alien’s acceptance of his sexuality feel just as epic as a battle with a cosmic anti-god. Sean Edgar
-</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
 
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackHammer15.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Black Hammer is Jeff Lemire’s remix of every Silver-Age superhero beat he’s ever concocted. Lemire and artists Dean Ormston and David Rubin jet into a post-modern buffet where Adam Strange is a wily, nonsensical hermit and Mary Marvel is an alcoholic middle-aged woman stuck in the super-powered body of a child. 
+</p><p>
+These characters are inexplicably trapped in the rural town of Rockwood, caged in by an invisible fence that kills them if they pass through. The series’ second year has only hinted at the cavernous depth waiting to be explored; the relationships, careers and decades hiding behind each player. As fun as it can be to watch the creators revel in their laissez faire capes sandbox, Black Hammer’s haunting characterization—conveyed with subtlety by Ormston—is what elevates it to excellence. Only in these pages does a shape-shifting alien’s acceptance of his sexuality feel just as epic as a battle with a cosmic anti-god.
 </p>
 
 </body>
