--- a/Vision/Vision.html
+++ b/Vision/Vision.html
@@ -8,10 +8,41 @@
 </head>
 
 <body>
-<img src="Vision.jpg"> <br>
-Series: 4 issues 1994<br>
-Publisher: Marvel<br>
+<img src="Vision1.jpg"> <br>
+4 issues in 1994, 14 issues from 2016 - 2017, 1 TPM collection 2018 by Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Vision1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vision19.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 "Dreams and Madmen" Part 1 of 4. Story by Bob Harras. Art by Manny Clark, Mike Machlan, and Al Vey. Cover by Steve Epting. The Vision is being haunted by dreams from his past, so he follows a mysterious beacon to New Orleans to find answers. Once there, the synthetic avenger encounters Ultron! Appearances by Deathcry, Giant-Man, and Jocasta. 
 </p><p>
 "Impaired Vision" Part 2 of 4. Story by Bob Harras. Art by Manny Clark and Mike Machlan. Cover by Steve Epting. The Vision has been missing from the Avengers for almost a month. Strangely, the Vision and Jocasta have opened a detective agency in Chicago. Something bizarre is going on, and Crystal and Deathcry go to investigate. 
