--- a/index.html
+++ b/index.html
@@ -4982,6 +4982,13 @@
 </tr>
 
 <tr>
+<td>East of West</td>
+<td>2013</td>
+<td>Image</td>
+<td><a href="EastOfWest/EastOfWest.html">Details</a></td>
+</tr>
+
+<tr>
 <td>EC Comics</td>
 <td>1944</td>
 <td>Publisher</td>
