--- a/Alias/alias.html
+++ b/Alias/alias.html
@@ -4,14 +4,12 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Alias</title>
+<title>Jessica Jones: Alias</title>
 </head>
 
 <body>
 <img src="AliasOmnibus.jpg"> <img src="JessicaJones.jpg"><br>
 28 issues 2001-2004, 1 TPB 2006 MAX (Marvel), 4 issues 2003-2004 Marvel<br>
-Illustrator: Michael Gaydos<br>
-Writer: Brian Michael Bendis<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -55,6 +53,8 @@ Writer: Brian Michael Bendis<br>
 </div></div>
 </p><p>
 Alias is about Jessica Jones, a former costumed superhero named Jewel who left that life behind to become a private investigator. The running thread is Jessica's character development, as the layers of her past and personality are revealed to the reader while, simultaneously, she tries to come to terms with them herself.
+</p><p>
+In 2015, Jessica Jones was released on Netflix, with the title character portrayed by Krysten Ritter as an adult and by Elizabeth Cappuccino as a teenager. As a child, she was in a car accident that killed her parents and put her in a coma. After she regained consciousness, Jessica was legally adopted by talent agent Dorothy Walker, therefore becoming the adopted sister of Trish Walker. As an adult, Jessica crosses paths with Kilgrave and spends a year under his control, snapping out of it after she kills Luke Cage's wife Reva Connors on Kilgrave's orders. She experiences post-traumatic stress disorder as a result of what Kilgrave did to her, and drinks to excess to numb her pain and guilt.
 </p><p>
 Characters from the series moved to Bendis' subsequent series The Pulse.
 Alias became the basis of the first season of the Netflix series Jessica Jones, which premiered in 2015.
