--- a/index.html
+++ b/index.html
@@ -7512,6 +7512,13 @@
 </tr>
 
 <tr>
+<td>Jessica Jones</td>
+<td>2001</td>
+<td>Marvel</td>
+<td><a href="Alias/alias.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jim Starlin</td>
 <td>1949</td>
 <td>Creator</td>
