--- a/GrendelTDI/GrendelTDI.html
+++ b/GrendelTDI/GrendelTDI.html
@@ -3,14 +3,12 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Grendel TDI</title>
+<title>Grendel the Devil Inside</title>
 </head>
 
 <body>
-Grendel: the Devil Inside<br>
 <img src="GrendelTDI.jpg"> <br>
-Series: 3 issues, 1 Graphic Novel 1989, 2004 Dark Horse reprint<br>
-Publisher: Graphiti Designs, Dark Horse<br>
+3 issues in 1989, 1 Graphic Novel in 2004 by Dark Horse
 <p>
 Written by Matt Wagner. Art by Bernie Mireault. The spirit of Grendel seethes in the mind of everyone it encounters. A touch of death, of fear, of anger infects all, gripping at the soul, and wreaking havoc on the lives of those in its path.
 </p><p>
