--- a/index.html
+++ b/index.html
@@ -6287,7 +6287,14 @@
 </tr>
 
 <tr>
-<td>Grendel: Devil Inside</td>
+<td>Grendel</td>
+<td>1986</td>
+<td>Comico</td>
+<td><a href="Grendel/Grendel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grendel: the Devil Inside</td>
 <td>1989</td>
 <td>Dark Horse</td>
 <td><a href="GrendelTDI/GrendelTDI.html">Details</a></td>
