--- a/index.html
+++ b/index.html
@@ -2448,6 +2448,13 @@
 </tr>
 
 <tr>
+<td>Black Monday Murders</td>
+<td>2016</td>
+<td>Image</td>
+<td><a href="BlackMondayMurders/BlackMondayMurders.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Orchid</td>
 <td>1938</td>
 <td>DC</td>
@@ -6769,6 +6776,13 @@
 </tr>
 
 <tr>
+<td>Hip Hop Family Tree</td>
+<td>2015</td>
+<td>Fantagraphics</td>
+<td><a href="HipHopFamilyTree/HipHopFamilyTree.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hinterkind</td>
 <td>2013</td>
 <td>Vertigo</td>
@@ -8181,6 +8195,13 @@
 <td>1991</td>
 <td>Marvel</td>
 <td><a href="LegionOfNight/LegionOfNight.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legion of Super-Heroes</td>
+<td>1973</td>
+<td>DC</td>
+<td><a href="LegionOfSuperHeroes/LegionOfSuperHeroes.html">Details</a></td>
 </tr>
 
 <tr>
