--- a/Transformers/Transformers.html
+++ b/Transformers/Transformers.html
@@ -2,15 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Transformers</title>
 </head>
 
 <body>
-<h2>Transformers</h2>
 <img src="TransformersMovie1.jpg"> <br>
-Publisher: Takara Tomy, Hasbro 1984<br>
+1984 by Takara Tomy, Hasbro, Dreamworks, Paramount<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersMovie8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersComic1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TransformersComic2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Transformers is a media franchise produced by American toy company Hasbro and Japanese toy company Takara Tomy. Initially a line of transforming toys rebranded from Takara's Diaclone and Microman toylines, the franchise began in 1984 with the Transformers toy line, and centers on factions of self-configuring modular extraterrestrial robotic lifeforms (often the Autobots and the Decepticons) in an endless civil war for dominance or eventual peace. In its history, the franchise has expanded to encompass comic books, animation, video games and films.
 </p><p>
 The term "Generation 1" covers both the animated television series The Transformers and the comic book series of the same name, which are further divided into Japanese and British spin-offs, respectively. Sequels followed, such as the Generation 2 comic book and Beast Wars TV series, which became its own mini-universe. Generation 1 characters underwent two reboots with Dreamwave in 2001 and IDW Publishing in 2005, also as a remastered series. 
@@ -25,6 +48,7 @@ Live Action Movies:<ul>
 <li>Dark of the Moon (2011)</li>
 <li>Age of Extinction (2014)</li>
 <li>The Last Knight (2017)</li>
+<li>Bumblebee (2018)</li>
 </ul>
 Animated Movies:<ul>
 <li>The Transformers: The Movie (1986)</li>
@@ -61,7 +85,10 @@ Animated Television:<ul>
 <li>Power of the Primes (2018)</li>
 <li>Cyberverse (2018)</li>
 </ul>
-
+Comics:<ul>
+<li>80 issues 1984 - 1991 by Marvel</li>
+<li>1 issue 2005, 31 issues 2009 - 2001, 11 issues 2019 by IDW</li>
+</ul>
 </p>
 
 </body>
