--- a/OmegaMen/OmegaMen.html
+++ b/OmegaMen/OmegaMen.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="OmegaMen1.jpg"> <br>
-Series: 38 issues 1983-1986, 6 issues 2006<br>
-Publisher: DC<br>
+38 issues from 1983 - 1986, 6 issues in 2006, 12 issues from 2015 - 2016 by DC
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -30,6 +29,11 @@ Publisher: DC<br>
 <div class="mySlides" style="text-align: center;"><img src="OmegaMen8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OmegaMen9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OmegaMen10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OmegaMen11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OmegaMen12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OmegaMen13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OmegaMen14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="OmegaMen15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
