--- a/index.html
+++ b/index.html
@@ -6797,6 +6797,20 @@
 </tr>
 
 <tr>
+<td>Hitman</td>
+<td>2005</td>
+<td>DC</td>
+<td><a href="HitmanDC/HitmanDC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hitman</td>
+<td>2005</td>
+<td>Eidos</td>
+<td><a href="HitmanEIDOS/HitmanEIDOS.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hokum &amp; Hex</td>
 <td>1993</td>
 <td>Marvel</td>
