--- a/index.html
+++ b/index.html
@@ -8366,6 +8366,13 @@
 </tr>
 
 <tr>
+<td>Locke &amp; Key</td>
+<td>2006</td>
+<td>IDW</td>
+<td><a href="LockeAndKey/LockeAndKey.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Logan's Run</td>
 <td>1976</td>
 <td>MGM</td>
