--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -34,6 +34,19 @@
 <div class="mySlides" style="text-align: center;"><img src="Kirby14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby29.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
