--- a/index.html
+++ b/index.html
@@ -8352,6 +8352,13 @@
 </tr>
 
 <tr>
+<td>Livewire</td>
+<td>2018</td>
+<td>Valiant</td>
+<td><a href="Livewire/Livewire.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Livewires</td>
 <td>2005</td>
 <td>Marvel</td>
