--- a/WickedAndTheDivine/WickedAndTheDivine.html
+++ b/WickedAndTheDivine/WickedAndTheDivine.html
@@ -2,18 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>tab</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>the Wicked + the Devine</title>
 </head>
 
 <body>
-The Wicked And The Divine<br>
-<img src="WickedAndTheDivine001.jpg"> <br>
-Series: 34 issues 2014<br>
-Publisher: Image<br>
-Written by Kieron Gillen<br>
-Illustrations by Jamie McKelvie and Matthew Wilson<br>
+<img src="WickedAndTheDivine1.jpg"> <br>
+45 issues from 2014 - 2019 by Image
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WickedAndTheDivine10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Every ninety years, twelve gods incarnate as teenagers. They are loved. They are hated. In two years, they are dead. The team behind critically thermonuclear floor-fillers Young Avengers and PHONOGRAM reunite to start a new ongoing superhero fantasy with a beautiful oversized issue. Welcome to THE WICKED + THE DIVINE, where gods are the ultimate pop-stars. But remember: just because you're immortal, doesn't mean you're going to live forever. 
 </p>
 </body>
