--- a/index.html
+++ b/index.html
@@ -5235,6 +5235,14 @@
 </tr>
 
 <tr>
+<td>Ernst Fuchs</td>
+<td>1930</td>
+<td>Creator</td>
+<td><a href="ErnstFuchs/ErnstFuchs.html">Details</a><td>
+</tr>
+
+
+<tr>
 <td>Erte</td>
 <td>1892</td>
 <td>Creator</td>
