--- a/ErnstFuchs/ErnstFuchs.html
+++ b/ErnstFuchs/ErnstFuchs.html
@@ -36,7 +36,7 @@
 </p><p>
 Ernst Fuchs (13 February 1930 – 9 November 2015) was an Austrian painter, draftsman, printmaker, sculptor, architect, stage designer, composer, poet, singer and one of the founders of the Vienna School of Fantastic Realism. In 1972, he acquired the derelict Otto Wagner Villa in Hütteldorf, which he restored and transformed. The villa was inaugurated as the Ernst Fuchs Museum in 1988. 
 </p><p>
-Fuch's work of this period was influenced by the art of Gustav Klimt and Egon Schiele and then by Max Pechstein, Heinrich Campendonck, Edvard Munch, Henry Moore and Pablo Picasso. During this time, seeking to achieve the vivid lighting effects achieved by such Old Masters as Albrecht Altdorfer, Albrecht Dürer, Matthias Grünewald and Martin Schongauer, he revived and adopted the mischtechnik (mixed technique) of painting. In the mischtechnik, egg tempera is used to build up volume, and is then glazed with oil paints mixed with resin, producing a jewel-like effect. 
+Fuch's work of this period was influenced by the art of <a href="../GustavKlimt/GustavKlimt.html">Gustav Klimt</a> and Egon Schiele and then by Max Pechstein, Heinrich Campendonck, <a href="../EdvardMunch/EdvardMunch.html">Edvard Munch</a>, Henry Moore and <a href="../PabloPicasso/PabloPicasso.html">Pablo Picasso</a>. During this time, seeking to achieve the vivid lighting effects achieved by such Old Masters as Albrecht Altdorfer, <a href="../AlbrechtDurer/AlbrechtDurer.html">Albrecht Dürer</a>, Matthias Grünewald and Martin Schongauer, he revived and adopted the mischtechnik (mixed technique) of painting. In the mischtechnik, egg tempera is used to build up volume, and is then glazed with oil paints mixed with resin, producing a jewel-like effect. 
 </p>
 </body>
 </html>
