--- a/index.html
+++ b/index.html
@@ -6777,6 +6777,13 @@
 </tr>
 
 <tr>
+<td>Hieronymus Bosch</td>
+<td>1450</td>
+<td>Creator</td>
+<td><a href="HieronymusBosch/HieronymusBosch.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hillbilly</td>
 <td>2016</td>
 <td>Albatross</td>
