--- a/EdvardMunch/EdvardMunch.html
+++ b/EdvardMunch/EdvardMunch.html
@@ -23,6 +23,9 @@
 <div class="mySlides" style="text-align: center;"><img src="EdvardMunch02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="EdvardMunch03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="EdvardMunch04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EdvardMunch05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EdvardMunch06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EdvardMunch07.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
