--- a/ViktorSafonkin/ViktorSafonkin.html
+++ b/ViktorSafonkin/ViktorSafonkin.html
@@ -40,7 +40,7 @@
 </p><p>
 Viktor Safonkin (born August 22, 1967 at Saransk) is a Russian surrealist painter.
 </p><p>
-Viktor Safonkin's work is self-described as Eurosurrealism or European classic surrealism & symbolism. His work is redolent of Salvador Dalí or more particularly Hieronymus Bosch. Victor's work has been highly acclaimed and in 2005 he was invited to exhibit at the European Parliament in Brussels. The rock band Killing Joke used his Inhuman Rearing as an album cover in 2006. Viktor Safonkin is featured in the 2007 Venus and the Female Intuition, published by SALBRU. Safonkin has been called "one of the most brilliant artists I have seen in a long time" by master Surrealist Professor Ernst Fuchs. 
+Viktor Safonkin's work is self-described as Eurosurrealism or European classic surrealism & symbolism. His work is redolent of <a href="../SalvadorDali/SalvadorDali.html">Salvador Dalí</a> or more particularly Hieronymus Bosch. Victor's work has been highly acclaimed and in 2005 he was invited to exhibit at the European Parliament in Brussels. The rock band Killing Joke used his Inhuman Rearing as an album cover in 2006. Viktor Safonkin is featured in the 2007 Venus and the Female Intuition, published by SALBRU. Safonkin has been called "one of the most brilliant artists I have seen in a long time" by master Surrealist Professor <a href="../ErnstFuchs/ErnstFuchs.html">Ernst Fuchs</a>. 
 
 </p>
 </body>
