--- a/index.html
+++ b/index.html
@@ -2244,6 +2244,13 @@
 </tr>
 
 <tr>
+<td>Beware</td>
+<td>1952</td>
+<td>Youthful</td>
+<td><a href="Beware/Beware.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beware! Terror Tales</td>
 <td>1952</td>
 <td>Fawcett</td>
