--- a/index.html
+++ b/index.html
@@ -14287,6 +14287,13 @@
 </tr>
 
 <tr>
+<td>Werewolves of Montpellier</td>
+<td>2010</td>
+<td>Fantagraphics</td>
+<td><a href="WerewolvesOfMontpellier/WerewolvesOfMontpellier.html">Details</a></td>
+</tr>
+
+<tr>
 <td>West Coast Avengers</td>
 <td>1984</td>
 <td>Marvel</td>
