--- a/index.html
+++ b/index.html
@@ -5805,6 +5805,13 @@
 </tr>
 
 <tr>
+<td>Fun Home</td>
+<td>2006</td>
+<td>Houghton Mifflin</td>
+<td><a href="FunHome/FunHome.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Funnies</td>
 <td>1929</td>
 <td>Dell</td>
