--- a/index.html
+++ b/index.html
@@ -8731,6 +8731,13 @@
 </tr>
 
 <tr>
+<td>Mars Attacks</td>
+<td>1962</td>
+<td>Topps</td>
+<td><a href="MarsAttacks/MarsAttacks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Marshal Law</td>
 <td>1987</td>
 <td>Marvel</td>
