--- a/index.html
+++ b/index.html
@@ -7765,6 +7765,13 @@
 </tr>
 
 <tr>
+<td>Justice: Four Balance</td>
+<td>1994</td>
+<td>Marvel</td>
+<td><a href="JusticeFourBalance/JusticeFourBalance.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Justice Comics</td>
 <td>1947</td>
 <td>Atlas</td>
@@ -7772,10 +7779,10 @@
 </tr>
 
 <tr>
-<td>Justice: Four Balance</td>
-<td>1994</td>
-<td>Marvel</td>
-<td><a href="JusticeFourBalance/JusticeFourBalance.html">Details</a></td>
+<td>Justice League of America</td>
+<td>1960</td>
+<td>DC</td>
+<td><a href="JusticeLeagueOfAmerica/JusticeLeagueOfAmerica.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10212,6 +10219,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="NewWarriors/NewWarriors.html">Details</a></td>
+</tr>
+
+<tr>
+<td>New X-Men</td>
+<td>2004</td>
+<td>Marvel</td>
+<td><a href="NewXMen/NewXMen.html">Details</a></td>
 </tr>
 
 <tr>
