--- a/index.html
+++ b/index.html
@@ -11696,6 +11696,13 @@
 </tr>
 
 <tr>
+<td>Sandro Botticelli</td>
+<td>1445</td>
+<td>Creator</td>
+<td><a href="SandroBotticelli/SandroBotticelli.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Saucer Country</td>
 <td>2012</td>
 <td>Vertigo</td>
