--- a/index.html
+++ b/index.html
@@ -11290,6 +11290,13 @@
 </tr>
 
 <tr>
+<td>Rembrandt</td>
+<td>1606</td>
+<td>Creator</td>
+<td><a href="Rembrandt/Rembrandt.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ren and Stimpy</td>
 <td>1990</td>
 <td>Nickelodeon</td>
