--- a/index.html
+++ b/index.html
@@ -9305,6 +9305,13 @@
 </tr>
 
 <tr>
+<td>Max Fleischer</td>
+<td>1883</td>
+<td>Creator</td>
+<td><a href="MaxFleischer/MaxFleischer.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Max Gaines</td>
 <td>1894</td>
 <td>Creator</td>
