--- a/index.html
+++ b/index.html
@@ -7618,6 +7618,13 @@
 </tr>
 
 <tr>
+<td>JLA</td>
+<td>1997</td>
+<td>DC</td>
+<td><a href="JLA/JLA.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joe Maneely</td>
 <td>1926</td>
 <td>Creator</td>
@@ -11217,6 +11224,13 @@
 <td>2010</td>
 <td>Vertigo</td>
 <td><a href="RatCatcher/RatCatcher.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rat Queens</td>
+<td>2013</td>
+<td>Image</td>
+<td><a href="RatQueens/RatQueens.html">Details</a></td>
 </tr>
 
 <tr>
