--- a/IKilledHitler/IKilledHitler.html
+++ b/IKilledHitler/IKilledHitler.html
@@ -2,17 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>I Killed Hitler</title>
 </head>
 
 <body>
-I Killed Adolf Hitler<br>
 <img src="IKilledHitler.jpg"> <br>
-Series: Graphic Novel 2017<br>
-Publisher: Fantagraphics<br>
+1 Graphic Novel in 2017 by Fantagraphics<br>
 Story and art by Jason<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="IKilledHitler.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IKilledHitler2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IKilledHitler3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IKilledHitler4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IKilledHitler5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IKilledHitler6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Between the opening note of perverse sexuality and the touching tribute to the permanence of true love at the end, murder, time travel and alternate futures fill in the second act of this astonishing graphic novel. Such a tale could only be penned by Jason, the Norwegian cartoonist who mixes outré fantasy with deadpan romanticism. 
 </p><p>
 As in all his books, this one is populated exclusively by a cast of lanky anthropomorphic animals. The setting is a world where hit man is just another job; the hero has a dissatisfied girlfriend and a boring job knocking off people who are merely annoying—a too loud neighbor, an overbearing boss. But as usual in Jason's work, the story soon veers off in an unexpected direction when the protagonist is hired to go back in time to kill Adolf Hitler via a time machine that takes 50 years to fully charge. 
