Strangers in Paradise

--- a/index.html
+++ b/index.html
@@ -12977,6 +12977,13 @@
 </tr>
 
 <tr>
+<td>Strangers in Paradise</td>
+<td>1993</td>
+<td>Antarctic Press</td>
+<td><a href="StrangersInParadise/StrangersInParadise.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Strawberry Shortcake</td>
 <td>1980</td>
 <td> American Greetings</td>
