--- a/index.html
+++ b/index.html
@@ -6302,6 +6302,13 @@
 </tr>
 
 <tr>
+<td>Green Lantern</td>
+<td>1941</td>
+<td>DC</td>
+<td><a href="GreenLantern/GreenLantern.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Green Woman</td>
 <td>2010</td>
 <td>Vertigo</td>
