--- a/index.html
+++ b/index.html
@@ -2189,6 +2189,13 @@
 </tr>
 
 <tr>
+<td>Bedlam</td>
+<td>2012</td>
+<td>Image</td>
+<td><a href="Bedlam/Bedlam.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bee 29 the Bombardier</td>
 <td>1945</td>
 <td>Spotlight</td>
@@ -11388,6 +11395,13 @@
 </tr>
 
 <tr>
+<td>Revival</td>
+<td>2012</td>
+<td>Image</td>
+<td><a href="Revival/Revival.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Revolver</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -12130,6 +12144,13 @@
 </tr>
 
 <tr>
+<td>Sheriff of Babylon</td>
+<td>2016</td>
+<td>Vertigo</td>
+<td><a href="SheriffOfBabylon/SheriffOfBabylon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ship Ahoy</td>
 <td>1944</td>
 <td>Spotlight</td>
@@ -12288,6 +12309,13 @@
 <td>1988</td>
 <td>Epic</td>
 <td><a href="SixFromSirius/SixFromSirius.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Six-Gun Gorilla</td>
+<td>2013</td>
+<td>Boom!</td>
+<td><a href="SixGunGorilla/SixGunGorilla.html">Details</a></td>
 </tr>
 
 <tr>
